syntax = "proto3";
package delivery;

message GetProjectionDataRequest {
	string projection = 1;
	string tenant_id = 2;
	string data_id = 3;
	int32 limit = 4;
	int32 page = 5;
	bool returnEmptyDataIfNotFound = 6;
}

message ProjectionData {
	map<string, string> data = 1;
}

message GetProjectionDataResponse {
	repeated ProjectionData result = 1;
	int32 limit = 2;
	int32 page = 3;
}
